nullaway_error_a91ca0d5-d1f6-4f3d-8e58-7446fd458eed.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/util/StatusInfo.java:107: error: [NullAway] dereferenced expression isHeathly is @Nullable
        return isHeathly.booleanValue();
                        ^
